--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </div>
 
         <div class="box tilt">
-            <img src="images/páginas-web-destacadas-por-su-diseño-orano-1024x556.JPG" alt="">
+            <img src="images/páginas-web-destacadas-por-su-diseño-orano-1024x556.jpg" alt="">
             <h3>ORANO </h3>
             <a href="https://www.orano.group/experience/innovation/en" class="btn">learn more</a>
         </div>
